--- a/app/assets/stylesheets/code_blocks.css.scss
+++ b/app/assets/stylesheets/code_blocks.css.scss
@@ -1,5 +1,14 @@
 @import "common";
 
+$green: #afcf45;
+$purple: #c64791;
+
+$light-orange: #f47123;
+$dark-orange: #f05325;
+
+$silver: #c1c5c9;
+$gold: #d6c29c;
+
 .post-body > pre {
     background-color: $gray;
     padding: 10px 20px;
