--- a/app/assets/stylesheets/layouts.css.scss
+++ b/app/assets/stylesheets/layouts.css.scss
@@ -1,4 +1,5 @@
 @import "common";
+@import "bourbon";
 
 ul {
   list-style-type: none;
@@ -254,8 +255,8 @@ footer {
     padding-bottom: 15px;
   }
   .contact-details {
+    @include box-sizing(border-box);
     background: $dark-blue;
-    box-sizing: border-box;
     padding: 20px 30px;
     font: 14px/24px "PT Sans", sans-serif;
   }
