--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -1,16 +1,14 @@
 @import "common";
+@import "bourbon";
 
 .post-box {
+  @include box-sizing(border-box);
+
   width: 230px;
   margin: 10px;
   padding: 15px;
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1) inset;
   background: $bright-blue;
-
-  moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  -ms-box-sizing: border-box;
-  box-sizing: border-box;
 }
 
 .all_posts {
