--- a/app/views/posts/_one_post.html.haml
+++ b/app/views/posts/_one_post.html.haml
@@ -1,13 +1,20 @@
 .post-show
-  %h1=post.title
-  %span.post-description
-    By
-    %span(style="width:30px;height:30px;background:url(#{Gravatar.new(post.author.email).image_url(:size => 30)});border-radius:100px;border:2px solid white;display:inline-block;margin-bottom:-10px;")
-    =link_to post.author.name, post.author.url
-    on
-    =(post.posted_on.present? ? post.posted_on.strftime("%B %e, %Y") : post.created_at.strftime("%B %e, %Y"))
-  .post-content
-    =post.body_html.html_safe
-  = render :partial => "share_buttons"
-   
+  .row
+    .three.columns
+      %span.post-description
+        .an_image(style="width:120px;height:120px;background:url(#{Gravatar.new(post.author.email).image_url(:size => 120)});border-radius:100px;border:2px solid white;display:block;margin:auto;margin-bottom:20px;")
+        By
+        =link_to post.author.name, post.author.url
+        %br
+        on
+        =(post.posted_on.present? ? post.posted_on.strftime("%B %e, %Y") : post.created_at.strftime("%B %e, %Y"))
+    .nine.columns
+      %h1=post.title
+      .post-content
+        =post.body_html.html_safe
+      = render :partial => "share_buttons"
+
+
+
+
 
