--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -61,7 +61,7 @@
   color: $gray;
   margin-bottom: 20px;
   display: block;
-  border-right: 1px solid $dark-gray;
+  border-right: 1px solid $medium-gray;
   min-height:300px;
 }
 
