--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -1,4 +1,4 @@
-=provide(:title, " | "+@post.title.mb_chars.capitalize.to_s)
+=provide(:title, " | #{@post.title.mb_chars.capitalize.to_s}".html_safe)
 %section.primary.wall-of-text
   = render :partial => "one_post", :locals => {:post => @post, :preview => false }
 
