Borrow the fixed-width font-family from github

--- a/app/assets/stylesheets/code_blocks.css.scss
+++ b/app/assets/stylesheets/code_blocks.css.scss
@@ -82,6 +82,6 @@ $gold: #d6c29c;
 body {
   pre, code {
     font-size: 16px;
-    font-family: 'monospace';
+    font-family: Consolas, "Liberation Mono", Courier, monospace;
   }
 }
