Clean up most recent tweet style

--- a/app/assets/stylesheets/footer.css.scss
+++ b/app/assets/stylesheets/footer.css.scss
@@ -26,7 +26,8 @@ footer .star-header {
   position: relative;
   p {
     padding-left: 50px;
-    margin-bottom: 0px;
+    margin: 0px 120px 0px 0px;
+    font-size: 13px;
   }
 }
 
