Fix font size in most recent tweet, remove cruft

--- a/app/assets/stylesheets/footer.css.scss
+++ b/app/assets/stylesheets/footer.css.scss
@@ -29,6 +29,10 @@ footer .star-header {
     margin: 0px 120px 0px 0px;
     font-size: 13px;
   }
+
+  &#footer-tweet {
+    font: 13px "Droid Serif", serif;
+  }
 }
 
 @media only screen and (max-width: 500px) {
