--- a/app/views/projects/_project.html.haml
+++ b/app/views/projects/_project.html.haml
@@ -3,6 +3,9 @@
   .overlay
     .link-wrapper
       %a.link-to-the-project{:href => p.url}
+
+.fp_desc= p.description
+
 - if admin_signed_in?
   .admin_bar
     %ul.link-list
