--- a/2013/css/style.css
+++ b/2013/css/style.css
@@ -87,7 +87,17 @@ section p a{
 	height: 51px;
 	-moz-border-radius: 5px;
 	-webkit-border-radius: 5px;
-	border-radius: 5px;
+  	-ms-border-radius: 5px;
+  	-o-border-radius: 5px;
+  	border-radius: 5px;
+  	-webkit-transition-property: all;
+  	-moz-transition-property: all;
+  	-o-transition-property: all;
+  	transition-property: all;
+  	-webkit-transition-duration: 275ms;
+  	-moz-transition-duration: 275ms;
+  	-o-transition-duration: 275ms;
+  	transition-duration: 275ms;;
 	-moz-background-clip: padding;
 	-webkit-background-clip: padding-box;
 	background-clip: padding-box;	
@@ -101,6 +111,7 @@ section p a{
 	text-align: center;
 	margin-bottom: 15px !important;
 	letter-spacing: -1px;
+	display: -moz-inline-stack;
 }
 
 .btn:hover{
