--- a/2013/css/style.css
+++ b/2013/css/style.css
@@ -1,13 +1,14 @@
 .clear{
 	clear: both;
 }
+
 header{
-	position: fixed;
 	width: 100%;
 	background: #FFFFFF;
 	border-bottom: 1px solid #e9e9e9;
 	padding-bottom: 35px;
 	z-index: 1;
+	position: fixed;
 }
 
 h1{
@@ -25,9 +26,11 @@ h1{
 	height: 8px;
 	background: url(../img/ellipsis.png) no-repeat;
 }
+
 h1#logo{
 	margin-top: 0;
 }
+
 h1#logo a{
 	background: url(../img/logo.png) no-repeat;
 	width: 202px;
@@ -80,9 +83,10 @@ section p a{
 	background: #545454
 }
 
-#team{
+#about{
 	border-bottom: 1px solid #dedede;
 }
+
 /* button classes */
 .btn{
 	width: 198px;
@@ -392,12 +396,31 @@ a.blog-link:hover{
 	color: #fcb040;	
 }
 
+ul.widget{
+	margin-bottom: 40px;
+}
+
+ul.widget li{
+	list-style: none;
+	border-bottom: 1px solid #e9e9e9;
+	padding: 15px 0;
+}
+
+ul.widget a{
+	font-size: 16px;
+	line-height: 30px;
+	color: #fcb040;
+}
+
 .date{
 	color: #818181;
 	font-size: 13px;
 	font-style: italic;
 }
 
+ul.widget li .date{
+	margin-top: 5px;
+}
 footer{
 	background: #2f2f2f;
 	padding: 30px 0px 90px;
@@ -422,4 +445,95 @@ footer ul li a:hover{
   	-o-transition: all 275ms;
   	transition: all 275ms;
 	color: #fcb040;
+}
+.header-gray{
+	height: 149px;
+	background-color: #f7f7f7;
+	border-bottom: 1px solid #e9e9e9;
+	margin-bottom: 60px;
+}
+.header-gray h1{
+	line-height: 149px;
+	margin: 0;
+}
+
+.blogs{
+	padding-bottom: 30px;
+}
+.avatar{
+	display: block;
+	margin: 0 auto;
+}
+.blog-wrapper{
+	border-bottom: 1px solid #e9e9e9;
+	padding-bottom: 60px;
+	margin-bottom: 60px;
+	overflow: hidden;
+}
+
+.blog h2{
+	font-size: 30px;
+	line-height: 36px;
+}
+
+.blog h3{
+	font-size: 24px;
+	line-height: 24px;
+	text-transform: none;
+	color: #9f9f9f;
+	font-weight: 300;
+	margin-top: 30px;
+}
+
+.blog ul{
+	color: #9f9f9f;
+	list-style-position: inside;
+}
+
+.blog a{
+	color: #40bcfc;
+}
+
+.blog ul li{
+	padding-left: 15px;	
+}
+
+.blog .read-more{
+	font-size: 18px;
+	font-weight: bold;
+	display: inline-block;
+	color: #545454;
+}
+
+.blog img{
+	margin: 20px 0;
+}
+.prev-post{
+	float: left;
+	padding-left: 20px;
+	background: url(../img/previous-post.png) no-repeat;
+	line-height: 16px;
+	color: #c0c0c0;
+	background-position: 0px -16px;
+	margin-top: -10px;
+}
+
+.next-post{
+	float: right;
+	padding-left: 20px;
+	background: url(../img/next-post.png) no-repeat;
+	line-height: 16px;
+	color: #c0c0c0;
+	background-position: 0 -16px;
+	margin-top: -10px;
+}
+
+.next-post:hover, .prev-post:hover{
+	background-position: 0 0;	
+	color: #545454;
+}
+
+em{
+	font-variant: italic;
+	color: #9f9f9f;
 }
