modals, more css, some tweaks, more js, images

--- a/2013/css/style.css
+++ b/2013/css/style.css
@@ -7,7 +7,7 @@ header{
 	background: #FFFFFF;
 	border-bottom: 1px solid #e9e9e9;
 	padding-bottom: 35px;
-	z-index: 1;
+	z-index: 10;
 	position: fixed;
 }
 
@@ -316,45 +316,53 @@ nav ul li a.selected, nav ul li a:hover{
 	margin-right: 0;
 }
 
-/*.ring{
-	width: 113px;
-	height: 113px;
-	background: url(../img/ring.png) center center no-repeat;	
-	text-align: center;
-	line-height: 113px;
-	margin-right: 63px;
-	float: left;
-}*/
-
 .ring{
-	width: 113px;
-	height: 113px;	
+	color: #c0c0c0;
+	width: 108px;
+	height: 108px;
+	cursor:pointer;
 	text-align: center;
-	line-height: 113px;
-	margin-right: 63px;
+	line-height: 102px;
+	margin-right: 68px;
 	float: left;
-    border: 4px double #c0c0c0;
-    overflow: hidden;;
-    background: #fff;
-    border-radius: 113px;
-    transition: all 400ms linear;
-    -webkit-transition: all 400ms linear;
-	-moz-transition: all 400ms linear;
-	-ms-transition: all 400ms linear;
-	-o-transition: all 400ms linear;	
+	border: 1px double #c0c0c0;
+	-moz-border-radius: 108px;
+	-webkit-border-radius: 108px;
+  	-ms-border-radius: 108px;
+  	-o-border-radius: 108px;
+	border-radius: 108px;
+	position: relative;
+	z-index:2;
+	background-color: #fff;
+	box-shadow:
+		0 0 0 4px white,
+	  	0 0 0 5px #c0c0c0;
+	webkit-transition: all 275ms;
+  	-moz-transition: all 275ms;
+  	-o-transition: all 275ms;
+  	transition: all 275ms;
 }
 
 .ring:hover{
-	background: #fcb040;
-    border: 4px double #fff;
-    transform: rotate(360deg);
-    -webkit-transform: rotate(360deg);
-    -moz-transform: rotate(360deg);
-    -ms-transform: rotate(360deg);
-    -o-transform: rotate(360deg);
-}
-.ring:hover .ring-sub{
-    opacity: 0.8;
+	color: #fcb040;
+	width: 108px;
+	height: 108px;
+	text-align: center;
+	line-height: 102px;
+	margin-right: 68px;
+	float: left;
+	border: 1px double #fcb040;
+	-moz-border-radius: 108px;
+	-webkit-border-radius: 108px;
+  	-ms-border-radius: 108px;
+  	-o-border-radius: 108px;
+	border-radius: 108px;
+	position: relative;
+	z-index:2;
+	background-color: #fcb040;
+	box-shadow:
+		0 0 0 4px white,
+	  	0 0 0 5px #fcb040;
 }
 
 .rings{
@@ -394,7 +402,7 @@ nav ul li a.selected, nav ul li a:hover{
 	border-bottom-color: #F5F5F5; 
 	border-width: 10px; 
 	left: 60px; 
-	margin-left: -10px;
+	margin-left: -18px;
 }
 
 .web-development{
@@ -595,4 +603,99 @@ footer ul li a:hover{
 em{
 	font-variant: italic;
 	color: #9f9f9f;
+}
+
+.reveal-modal{ 
+  -webkit-moz-border-radius: 3px;
+  -moz-moz-border-radius: 3px;
+  -ms-moz-border-radius: 3px;
+  -o-moz-border-radius: 3px;
+  border-radius: 3px;
+}
+
+.reveal-modal .graph{
+	margin-top: 58px;
+}
+
+.reveal-modal .info{ 
+	width: 204px;	
+	background-color: rgba(246,246,246,.9);
+	border: 1px solid #e9e9e9;
+	-webkit-moz-border-radius: 4px;
+	-moz-moz-border-radius: 4px;
+	-ms-moz-border-radius: 4px;
+	-o-moz-border-radius: 4px;
+	border-radius: 4px;	
+	float: left;
+}
+
+.reveal-modal .info .avatar{ 
+	padding-top: 7px;
+	padding-bottom: 8px;
+}
+
+.reveal-modal .info img{ 
+	display: block;
+	margin: 0 auto;	
+}
+
+.reveal-modal .info .social-media{
+	width: 100%;
+	text-align: center;
+	padding: 13px 0 10px;
+	background: #ffffff;
+}
+
+.reveal-modal .info .social-media .twitter{
+	width: 21px;
+	height: 15px;
+	background: url(../img/employee-twitter.png) no-repeat;
+	display: inline-block;
+	margin-left: 3px;
+}
+
+.reveal-modal .info .social-media .google{
+	width: 9px;
+	height: 15px;
+	background: url(../img/employee-google.png) no-repeat;	
+	display: inline-block;
+}
+
+.reveal-modal .bio{
+	float: left;
+	width: 70%;	
+	padding-left: 18px;
+}
+
+.reveal-modal .bio h2{
+	color: #fbaf3f;
+	font-size: 30px;	
+	font-weight: bold;
+	text-transform: uppercase;
+	margin-top: 0;
+	margin-bottom: 3px;
+}
+
+.reveal-modal .bio h3{
+	color: #535353;
+	font-size: 14px;
+	text-transform: uppercase;	
+	font-weight: normal;
+	line-height: 24px;
+	margin: 0;
+}
+
+.reveal-modal .bio p{
+	color: #a9a9a9;
+	font-size: 12px;	
+}
+
+.reveal-modal .close-reveal-modal{ 
+	cursor: pointer; 
+	width: 53px;
+	height: 53px;
+	background: url(../img/modal-close.png) no-repeat;
+	position: absolute;
+	top: 0!important;
+	right: 0!important;
 }
