--- a/2013/css/style.css
+++ b/2013/css/style.css
@@ -59,7 +59,7 @@ section{
 }
 
 section p{
-	color: #9f9f9f;
+	color: #919191;
 	font-size: 14px;
 }
 
@@ -539,13 +539,13 @@ footer ul li a:hover{
 	font-size: 24px;
 	line-height: 24px;
 	text-transform: none;
-	color: #9f9f9f;
+	color: #767676;
 	font-weight: 300;
 	margin-top: 30px;
 }
 
 .blog ul{
-	color: #9f9f9f;
+	color: #919191;
 	list-style-position: inside;
 }
 
