--- a/2013/css/style.css
+++ b/2013/css/style.css
@@ -1,3 +1,7 @@
+body{
+	-webkit-backface-visibility: hidden;
+}
+
 .clear{
 	clear: both;
 }
@@ -275,9 +279,11 @@ nav ul li a.selected, nav ul li a:hover{
 	float: left;
 	padding-right: 100px;
 	width: 242px;	
-	margin-top: -20px;
+	margin-top: -15px;
 	position: relative;
+	visibility: hidden;
 }
+
 .team-mate a{
 	height: 142px;
 	width: 142px;	
@@ -298,6 +304,154 @@ nav ul li a.selected, nav ul li a:hover{
 	display: none;
 }
 
+.team-mate .team-mate-mask{
+	width: 142px;
+	height: 142px;
+	background: url(../img/mask-circle.png) no-repeat;
+	display: block;
+	position: absolute;
+	top: 0px;
+
+	-webkit-transition: all 0.3s ease 0s;
+	-moz-transition: all 0.3s ease 0s;
+	-o-transition: all 0.3s ease 0s;
+	transition: all 0.3s ease 0s;
+}
+
+.team-mate a:hover .circle-mask{
+	-webkit-transform: scale(1.1);
+	-moz-transform: scale(1.1);
+	-o-transform: scale(1.1);
+	transform: scale(1.1);
+}
+
+.team-mate-bio{
+	padding-top: 185px;
+	position: relative;
+}
+
+
+.graph-wrapper{
+	position: relative;	
+	float: left;
+}
+
+.graph-wrapper .interests {
+	position: absolute;
+	top: 34px;
+	left: 43px;
+	background: #f6f6f6;
+	border: 4px solid #f6f6f6;
+	color: #535353;
+	font-family: "Open Sans", sans-serif;
+	font-size: 18px;
+	font-weight: bold;
+	text-transform: uppercase;
+	padding: 9px 7px;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	border-radius: 5px;
+
+}
+.graph-wrapper .interests:after,.graph-wrapper.interests:before {
+	top: 100%;
+	border: solid transparent;
+	content: " ";
+	height: 0;
+	width: 0;
+	position: absolute;
+	pointer-events: none;
+}
+
+.graph-wrapper .interests:after {
+	border-color: rgba(246, 246, 246, 0);
+	border-top-color: #f6f6f6;
+	border-width: 15px;
+	left: 50%;
+	margin-left: -15px;
+}
+
+.team-mate-bio .graph{
+	margin-top: 58px;
+	vertical-align: bottom;
+}
+
+
+.team-mate-bio .info{ 
+	width: 204px;	
+	height: 241px;
+	background-color: rgba(246,246,246,.9);
+	border: 1px solid #e9e9e9;
+	-webkit-moz-border-radius: 4px;
+	-moz-moz-border-radius: 4px;
+	-ms-moz-border-radius: 4px;
+	-o-moz-border-radius: 4px;
+	border-radius: 4px;	
+	float: left;
+}
+
+.team-mate-bio .info .avatar{ 
+	padding-top: 7px;
+	padding-bottom: 8px;
+	height: 199px;
+}
+
+.team-mate-bio .info img{ 
+	display: block;
+	margin: 0 auto;		
+}
+
+.team-mate-bio .info .social-media{
+	width: 100%;
+	text-align: center;
+	padding: 13px 0 10px;
+	background: #ffffff;
+}
+
+.team-mate-bio .info .social-media .twitter{
+	width: 21px;
+	height: 15px;
+	background: url(../img/employee-twitter.png) no-repeat;
+	display: inline-block;
+	margin-left: 3px;
+}
+
+.team-mate-bio .info .social-media .google{
+	width: 9px;
+	height: 15px;
+	background: url(../img/employee-google.png) no-repeat;	
+	display: inline-block;
+}
+
+.team-mate-bio .bio{
+	float: left;
+	width: 70%;	
+	padding-left: 18px;
+}
+
+.team-mate-bio .bio h2{
+	color: #fbaf3f;
+	font-size: 30px;	
+	font-weight: bold;
+	text-transform: uppercase;
+	margin-top: 0;
+	margin-bottom: 3px;
+}
+
+.team-mate-bio .bio h3{
+	color: #535353;
+	font-size: 14px;
+	text-transform: uppercase;	
+	font-weight: normal;
+	line-height: 24px;
+	margin: 0;
+}
+
+.team-mate-bio .bio p{
+	color: #a9a9a9;
+	font-size: 12px;	
+}
+
 .drop-cap{
 	font-weight: bold;
 	font-size: 18px;
@@ -310,16 +464,25 @@ nav ul li a.selected, nav ul li a:hover{
 .our-projects{	
 	text-align: center;
 	margin-top: 95px !important;
+	margin-left: 0!important;
+	margin-right: 0!important;
 }
 .project{
 	width: 196px;
 	float: left;
-	margin-right: 3.5%;
+	margin-right: 3%;
 	margin-top: -30px;
+	height: 226px;
+	overflow: hidden;
+	display: block;
+	position: relative;
+	visibility: hidden;
 }
 
 .project-top-column{
 	width: 100%;	
+	margin-left: 0px!important;
+	margin-right: 0px!important;
 }
 
 .project-bottom-column{
@@ -342,6 +505,27 @@ nav ul li a.selected, nav ul li a:hover{
 
 .project.last{
 	margin-right: 0;
+}
+
+.project .mask{
+	width: 224px;
+	height: 257px;
+	background: url(../img/mask.png) no-repeat;
+	display: block;
+	position: absolute;
+	top: 0px;
+
+	-webkit-transition: all 0.3s ease 0s;
+	-moz-transition: all 0.3s ease 0s;
+	-o-transition: all 0.3s ease 0s;
+	transition: all 0.3s ease 0s;
+}
+
+.project a:hover .mask{
+	-webkit-transform: scale(1.1);
+	-moz-transform: scale(1.1);
+	-o-transform: scale(1.1);
+	transform: scale(1.1);
 }
 
 .ring{
@@ -634,101 +818,6 @@ em{
 	color: #9f9f9f;
 }
 
-.reveal-modal{ 
-  -webkit-moz-border-radius: 3px;
-  -moz-moz-border-radius: 3px;
-  -ms-moz-border-radius: 3px;
-  -o-moz-border-radius: 3px;
-  border-radius: 3px;
-}
-
-.reveal-modal .graph{
-	margin-top: 58px;
-}
-
-.reveal-modal .info{ 
-	width: 204px;	
-	background-color: rgba(246,246,246,.9);
-	border: 1px solid #e9e9e9;
-	-webkit-moz-border-radius: 4px;
-	-moz-moz-border-radius: 4px;
-	-ms-moz-border-radius: 4px;
-	-o-moz-border-radius: 4px;
-	border-radius: 4px;	
-	float: left;
-}
-
-.reveal-modal .info .avatar{ 
-	padding-top: 7px;
-	padding-bottom: 8px;
-}
-
-.reveal-modal .info img{ 
-	display: block;
-	margin: 0 auto;	
-}
-
-.reveal-modal .info .social-media{
-	width: 100%;
-	text-align: center;
-	padding: 13px 0 10px;
-	background: #ffffff;
-}
-
-.reveal-modal .info .social-media .twitter{
-	width: 21px;
-	height: 15px;
-	background: url(../img/employee-twitter.png) no-repeat;
-	display: inline-block;
-	margin-left: 3px;
-}
-
-.reveal-modal .info .social-media .google{
-	width: 9px;
-	height: 15px;
-	background: url(../img/employee-google.png) no-repeat;	
-	display: inline-block;
-}
-
-.reveal-modal .bio{
-	float: left;
-	width: 70%;	
-	padding-left: 18px;
-}
-
-.reveal-modal .bio h2{
-	color: #fbaf3f;
-	font-size: 30px;	
-	font-weight: bold;
-	text-transform: uppercase;
-	margin-top: 0;
-	margin-bottom: 3px;
-}
-
-.reveal-modal .bio h3{
-	color: #535353;
-	font-size: 14px;
-	text-transform: uppercase;	
-	font-weight: normal;
-	line-height: 24px;
-	margin: 0;
-}
-
-.reveal-modal .bio p{
-	color: #a9a9a9;
-	font-size: 12px;	
-}
-
-.reveal-modal .close-reveal-modal{ 
-	cursor: pointer; 
-	width: 53px;
-	height: 53px;
-	background: url(../img/modal-close.png) no-repeat;
-	position: absolute;
-	top: 0!important;
-	right: 0!important;
-}
-
 .window-wrapper{
 	border-bottom: 1px solid #e9e9e9;
 
@@ -852,7 +941,7 @@ em{
 	margin-right: 0;
 }
 
-.trucks{
+/*.trucks{
 	-webkit-animation: movetrucks 4s ease-out;	
 	-moz-animation: movetrucks 4s ease-out;
 	-o-animation: movetrucks 4s ease-out;
@@ -1049,4 +1138,118 @@ em{
 @eyframes cloud-animation3 {
 	0% {right: 0px;}
 	100% {right: 30px;}
+}*/
+
+
+@-webkit-keyframes fadeOutUp {
+	0% {
+		opacity: 1;
+		-webkit-transform: translateY(0);
+	}
+	
+	100% {
+		opacity: 0;
+		-webkit-transform: translateY(-50px);
+	}
+}
+@-moz-keyframes fadeOutUp {
+	0% {
+		opacity: 1;
+		-moz-transform: translateY(0);
+	}
+	
+	100% {
+		opacity: 0;
+		-moz-transform: translateY(-50px);
+	}
+}
+@-o-keyframes fadeOutUp {
+	0% {
+		opacity: 1;
+		-o-transform: translateY(0);
+	}
+	
+	100% {
+		opacity: 0;
+		-o-transform: translateY(-50px);
+	}
+}
+@keyframes fadeOutUp {
+	0% {
+		opacity: 1;
+		transform: translateY(0);
+	}
+	
+	100% {
+		opacity: 0;
+		transform: translateY(-50px);
+	}
+}
+
+.fadeOutUp {
+	-webkit-animation-name: fadeOutUp;
+	-moz-animation-name: fadeOutUp;
+	-o-animation-name: fadeOutUp;
+	animation-name: fadeOutUp;
+}
+
+@-moz-keyframes fadeInDown {
+	0% {
+		opacity: 0;
+		-moz-transform: translateY(-20px);
+	}
+	
+	100% {
+		opacity: 1;
+		-moz-transform: translateY(0);
+	}
+}
+
+@-o-keyframes fadeInDown {
+	0% {
+		opacity: 0;
+		-o-transform: translateY(-20px);
+	}
+	
+	100% {
+		opacity: 1;
+		-o-transform: translateY(0);
+	}
+}
+
+@keyframes fadeInDown {
+	0% {
+		opacity: 0;
+		transform: translateY(-20px);
+	}
+	
+	100% {
+		opacity: 1;
+		transform: translateY(0);
+	}
+}
+
+.fadeInDown {
+	-webkit-animation-name: fadeInDown;
+	-moz-animation-name: fadeInDown;
+	-o-animation-name: fadeInDown;
+	animation-name: fadeInDown;
+}
+
+#content-wrapper{	
+	-webkit-animation-duration: 0.6s;
+	   -moz-animation-duration: 0.6s;
+	     -o-animation-duration: 0.6s;
+	        animation-duration: 0.6s;
+	    
+	-webkit-animation-fill-mode: both;
+	   -moz-animation-fill-mode: both;
+	     -o-animation-fill-mode: both;
+	        animation-fill-mode: both;
+	
+	-webkit-animation-timing-function: linear;
+	-moz-animation-timing-function: linear;
+	-o-animation-timing-function: linear;
+	animation-timing-function: linear;
+
 }
