--- a/2013/css/style.css
+++ b/2013/css/style.css
@@ -1,3 +1,6 @@
+
+@import url('animations.css');
+
 body{
 	-webkit-backface-visibility: hidden;
 }
@@ -10,7 +13,7 @@ header{
 	width: 100%;
 	background: #FFFFFF;
 	border-bottom: 1px solid #e9e9e9;
-	padding-bottom: 35px;
+	padding-bottom: 40px;
 	z-index: 10;
 	position: fixed;
 }
@@ -215,7 +218,7 @@ nav ul li a.selected, nav ul li a:hover{
 }
 
 .cloud1{
-	top: 5px;
+	top: 10px;
 	right: 10px;	
 }
 
@@ -240,6 +243,45 @@ nav ul li a.selected, nav ul li a:hover{
 	bottom: 0;
 	left: 0;
 }
+
+.truck1, .truck2, .truck3{
+	position: absolute;
+}
+
+.truck1{
+	bottom: 0;
+	left: 132px;
+}
+
+.truck2{
+	bottom: 0;
+	left: 67px;
+}
+
+.truck3{
+	bottom: 0;
+	left: 0px;
+}
+
+.truck-star, .truck-bulb, .truck-heart{
+	position: absolute;
+}
+
+.truck-heart{
+	bottom: 36px;
+	left: 138px;
+}
+
+.truck-bulb{
+	bottom: 35px;
+	left: 75px;
+}
+
+.truck-star{
+	bottom: 37px;
+	left: 7px;
+}
+
 
 .launch-pad{
 	bottom: -10px;
@@ -425,7 +467,7 @@ nav ul li a.selected, nav ul li a:hover{
 
 .team-mate-bio .bio{
 	float: left;
-	width: 70%;	
+	width: 82%;	
 	padding-left: 18px;
 }
 
@@ -449,7 +491,7 @@ nav ul li a.selected, nav ul li a:hover{
 
 .team-mate-bio .bio p{
 	color: #a9a9a9;
-	font-size: 12px;	
+	font-size: 13px;	
 }
 
 .drop-cap{
@@ -939,317 +981,4 @@ em{
 
 .related-work ul li:last-child{
 	margin-right: 0;
-}
-
-/*.trucks{
-	-webkit-animation: movetrucks 4s ease-out;	
-	-moz-animation: movetrucks 4s ease-out;
-	-o-animation: movetrucks 4s ease-out;
-	animation: movetrucks 4s ease-out;
-
-
-    -webkit-animation-iteration-count: 1;
-	-moz-animation-iteration-count: 1;
-	-o-animation-iteration-count: 1;
-	animation-iteration-count: 1;
-	
-	-webkit-animation-fill-mode: forwards;
-	-moz-animation-fill-mode: forwards;
-	-o-animation-fill-mode: forwards;
-	animation-fill-mode: forwards;
-}
-
-
-@-webkit-keyframes movetrucks {
-	0% {left: 0;}
-	100% {left: 800px;}
-}
-
-@-moz-keyframes movetrucks {
-	0% {left: 0;}
-	100% {left: 800px;}
-}
-
-@-o-keyframes movetrucks {
-	0% {left: 0;}
-	100% {left: 800px;}			
-}
-
-@keyframes movetrucks {
-	0% {left: 0;}
-	100% {left: 800px;}
-}
-
-
-.rocket{
-	-webkit-animation: liftoff 5s linear;	
-	-moz-animation: liftoff 5s linear;
-	-o-animation: liftoff 5s linear;
-	animation: liftoff 5s linear;
-
-
-    -webkit-animation-iteration-count: 1;
-	-moz-animation-iteration-count: 1;
-	-o-animation-iteration-count: 1;
-	animation-iteration-count: 1;
-	
-	-webkit-animation-fill-mode: forwards;
-	-moz-animation-fill-mode: forwards;
-	-o-animation-fill-mode: forwards;
-	animation-fill-mode: forwards;
-
-	-webkit-animation-delay: 4s;
-	-moz-animation-delay: 4s;
-	-o-animation-delay: 4s;
-	animation-delay: 4s;
-}
-
-@-webkit-keyframes liftoff {
-	0% {bottom: 12px;}
-	100% {bottom: 700px; transform:rotateX(30deg);}
-}
-
-@-moz-keyframes liftoff {
-	0% {bottom: 12px;}
-	100% {bottom: 700px;transform:rotateX(30deg);}
-}
-
-@-o-keyframes liftoff {
-	0% {bottom: 12px;}
-	100% {bottom: 700px;transform:rotateX(30deg);}			
-}
-
-@keyframes liftoff {
-	0% {bottom: 12px;}
-	100% {bottom: 700px;transform:rotateX(30deg);}
-}
-
-.cloud1{
-	-webkit-animation: cloud-animation1 20s linear;	
-	-moz-animation: cloud-animation1 20s linear;
-	-o-animation: cloud-animation1 20s linear;
-	animation: cloud-animation1 20s linear;
-	
-	-webkit-animation-direction: alternate;
-	-moz-animation-direction: alternate;
-	-o-animation-direction: alternate;
-	animation-direction: alternate;	
-
-	-webkit-animation-iteration-count: infinite;
-	-moz-animation-iteration-count: infinite;
-	-o-animation-iteration-count: infinite;
-	animation-iteration-count: infinite;
-}
-
-@-moz-keyframes cloud-animation1 {
-	0% {right: 10px;}
-	100% {right: 40px;}
-}
-
-@-webkit-keyframes cloud-animation1 {
-	0% {right: 10px;}
-	100% {right: 40px;}
-}
-
-@-o-keyframes cloud-animation1 {
-	0% {right: 10px;}
-	100% {right: 40px;}
-}
-
-
-@eyframes cloud-animation1 {
-	0% {right: 10px;}
-	100% {right: 40px;}
-}
-
-
-.cloud2{
-	-webkit-animation: cloud-animation2 25s linear;	
-	-moz-animation: cloud-animation2 25s linear;
-	-o-animation: cloud-animation2 25s linear;
-	animation: cloud-animation2 25s linear;
-	
-	-webkit-animation-direction: alternate;
-	-moz-animation-direction: alternate;
-	-o-animation-direction: alternate;
-	animation-direction: alternate;	
-
-	-webkit-animation-iteration-count: infinite;
-	-moz-animation-iteration-count: infinite;
-	-o-animation-iteration-count: infinite;
-	animation-iteration-count: infinite;
-}
-
-@-moz-keyframes cloud-animation2 {
-	0% {right: 96px;}
-	100% {right: 0px;}
-}
-
-@-webkit-keyframes cloud-animation2 {
-	0% {right: 96px;}
-	100% {right: 0px;}
-}
-
-@-o-keyframes cloud-animation2 {
-	0% {right: 96px;}
-	100% {right: 0px;}
-}
-
-
-@eyframes cloud-animation2 {
-	0% {right: 96px;}
-	100% {right: 0px;}
-}
-
-
-.cloud3{
-	-webkit-animation: cloud-animation3 25s linear;	
-	-moz-animation: cloud-animation3 25s linear;
-	-o-animation: cloud-animation3 25s linear;
-	animation: cloud-animation3 25s linear;
-	
-	-webkit-animation-direction: alternate;
-	-moz-animation-direction: alternate;
-	-o-animation-direction: alternate;
-	animation-direction: alternate;	
-
-	-webkit-animation-iteration-count: infinite;
-	-moz-animation-iteration-count: infinite;
-	-o-animation-iteration-count: infinite;
-	animation-iteration-count: infinite;
-}
-
-@-moz-keyframes cloud-animation3 {
-	0% {right: 0px;}
-	100% {right: 30px;}
-}
-
-@-webkit-keyframes cloud-animation3 {
-	0% {right: 0px;}
-	100% {right: 30px;}
-}
-
-@-o-keyframes cloud-animation3 {
-	0% {right: 0px;}
-	100% {right: 30px;}
-}
-
-
-@eyframes cloud-animation3 {
-	0% {right: 0px;}
-	100% {right: 30px;}
-}*/
-
-
-@-webkit-keyframes fadeOutUp {
-	0% {
-		opacity: 1;
-		-webkit-transform: translateY(0);
-	}
-	
-	100% {
-		opacity: 0;
-		-webkit-transform: translateY(-50px);
-	}
-}
-@-moz-keyframes fadeOutUp {
-	0% {
-		opacity: 1;
-		-moz-transform: translateY(0);
-	}
-	
-	100% {
-		opacity: 0;
-		-moz-transform: translateY(-50px);
-	}
-}
-@-o-keyframes fadeOutUp {
-	0% {
-		opacity: 1;
-		-o-transform: translateY(0);
-	}
-	
-	100% {
-		opacity: 0;
-		-o-transform: translateY(-50px);
-	}
-}
-@keyframes fadeOutUp {
-	0% {
-		opacity: 1;
-		transform: translateY(0);
-	}
-	
-	100% {
-		opacity: 0;
-		transform: translateY(-50px);
-	}
-}
-
-.fadeOutUp {
-	-webkit-animation-name: fadeOutUp;
-	-moz-animation-name: fadeOutUp;
-	-o-animation-name: fadeOutUp;
-	animation-name: fadeOutUp;
-}
-
-@-moz-keyframes fadeInDown {
-	0% {
-		opacity: 0;
-		-moz-transform: translateY(-20px);
-	}
-	
-	100% {
-		opacity: 1;
-		-moz-transform: translateY(0);
-	}
-}
-
-@-o-keyframes fadeInDown {
-	0% {
-		opacity: 0;
-		-o-transform: translateY(-20px);
-	}
-	
-	100% {
-		opacity: 1;
-		-o-transform: translateY(0);
-	}
-}
-
-@keyframes fadeInDown {
-	0% {
-		opacity: 0;
-		transform: translateY(-20px);
-	}
-	
-	100% {
-		opacity: 1;
-		transform: translateY(0);
-	}
-}
-
-.fadeInDown {
-	-webkit-animation-name: fadeInDown;
-	-moz-animation-name: fadeInDown;
-	-o-animation-name: fadeInDown;
-	animation-name: fadeInDown;
-}
-
-#content-wrapper{	
-	-webkit-animation-duration: 0.6s;
-	   -moz-animation-duration: 0.6s;
-	     -o-animation-duration: 0.6s;
-	        animation-duration: 0.6s;
-	    
-	-webkit-animation-fill-mode: both;
-	   -moz-animation-fill-mode: both;
-	     -o-animation-fill-mode: both;
-	        animation-fill-mode: both;
-	
-	-webkit-animation-timing-function: linear;
-	-moz-animation-timing-function: linear;
-	-o-animation-timing-function: linear;
-	animation-timing-function: linear;
-
 }
